Fixed so the UI controls are as wide as 4.1.x to avoid wrapping controls in toolbars.

--- a/js/tinymce/skins/lightgray/ButtonGroup.less
+++ b/js/tinymce/skins/lightgray/ButtonGroup.less
@@ -17,8 +17,8 @@
 
 .@{prefix}-btn-group:not(:first-child) {
 	border-left: 1px solid darken(@btn-bg, 15%);
-	padding-left: @flow-layout-spacing + 2px;
-	margin-left: @flow-layout-spacing + 2px;
+	padding-left: @flow-layout-spacing + 1px;
+	margin-left: @flow-layout-spacing + 1px;
 }
 
 .@{prefix}-btn-group .@{prefix}-first {
