--- a/js/tinymce/skins/lightgray/ColorButton.less
+++ b/js/tinymce/skins/lightgray/ColorButton.less
@@ -10,7 +10,7 @@
 
 .@{prefix}-colorbutton button {
     padding-right: 6px;
-    padding-left: 8px;
+    padding-left: 6px;
 }
 
 .@{prefix}-colorbutton .@{prefix}-preview {
@@ -19,7 +19,7 @@
 	position: absolute;
 	left: 50%;
 	top: 50%;
-	margin-left: -16px;
+	margin-left: -17px;
 	margin-top: 7px;
 	background: gray;
 	width: 13px;
@@ -28,7 +28,7 @@
 }
 
 .@{prefix}-colorbutton.@{prefix}-btn-small .@{prefix}-preview {
-	margin-left: -15px;
+	margin-left: -16px;
 	padding-right: 0;
 	width: 16px;
 }
@@ -56,7 +56,7 @@
 .@{prefix}-rtl .@{prefix}-colorbutton .@{prefix}-preview {
 	margin-left: 0;
 	padding-right: 0;
-	padding-left: 5px;
+	padding-left: 3px;
 }
 
 .@{prefix}-rtl .@{prefix}-colorbutton.@{prefix}-btn-small .@{prefix}-preview {
