--- a/js/tinymce/skins/lightgray/SplitButton.less
+++ b/js/tinymce/skins/lightgray/SplitButton.less
@@ -10,7 +10,7 @@
 
 .@{prefix}-splitbtn button {
 	padding-right: 6px;
-	padding-left: 8px;
+	padding-left: 6px;
 }
 
 .@{prefix}-splitbtn .@{prefix}-open {
